--- a/core/templates/_sidebar.html
+++ b/core/templates/_sidebar.html
@@ -24,8 +24,8 @@
     <div class="text-muted text-uppercase small mb-2">Навигация</div>
     <ul class="nav flex-column mb-3">
       <li class="nav-item"><a class="nav-link" href="{% url 'base_project_settings' %}">Preplot</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">DSR таблица</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">ROV линии</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">DSR</a></li>
+      <li class="nav-item"><a class="nav-link" href="{% url 'rov_main_view' %}">ROV SURVEY</a></li>
     </ul>
 
     <div class="text-muted text-uppercase small mb-2">QC & Production</div>
