--- a/rov/templates/rov/cards/gnss_qc_card.html
+++ b/rov/templates/rov/cards/gnss_qc_card.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="card shadow">
+    <div class="card-header">
+
+    </div>
+    <div class="card-body">
+        <div id="gnss-qc-plot" class="w-100" style="height: 70vh">
+
+        </div>
+    </div>
+</div>
