--- a/baseproject/templates/baseproject/partials/sl_point_list.html
+++ b/baseproject/templates/baseproject/partials/sl_point_list.html
@@ -1,6 +1,6 @@
-<table id="rp-table-list" class="table table-hover">
+<table id="sp-table-list" class="table table-hover">
     <thead>
-       <th><input type="checkbox" id="mainRPCheckBox" data-line-fk = "{line_id}"></th>
+       <th><input type="checkbox" id="mainSPCheckBox" data-line-fk = "{line_id}"></th>
        <th>Line</th>
        <th>Point</th>
        <th>Point Idx.</th>
@@ -13,7 +13,7 @@
        {% if point_list %}
             {% for l in point_list %}
                 <tr data-point-id="{{ l.ID }}">
-                   <td><input type="checkbox" class="rp_checkbox" data-point-id="{{ l.ID }}"> </td>
+                   <td><input type="checkbox" class="sp_checkbox" data-point-id="{{ l.ID }}"> </td>
                    <td>{{ l.Line }}</td>
                    <td>{{ l.Point }}</td>
                    <td>{{ l.PointIndex }}</td>
