--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -33,10 +33,11 @@
     <small>&copy; {{ now|date:"Y" }} SeisWebLog Demo</small>
   </footer>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  
   <script src="https://unpkg.com/lottie-web/build/player/lottie.min.js"></script>
-  <script type="module" src="{% static 'baseproject/js/app.js' %}"></script>
+  
   <script
     src="https://cdn.bokeh.org/bokeh/release/bokeh-3.8.2.min.js">
   </script>
@@ -49,5 +50,6 @@
     src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-3.8.2.min.js">
   </script>
   {% block extra_js %}{% endblock %}
+<script type="module" src="{% static 'baseproject/js/app.js' %}"></script>
 </body>
 </html>
