--- a/rov/templates/rov/cards/dsr_lines_card.html
+++ b/rov/templates/rov/cards/dsr_lines_card.html
@@ -2,20 +2,23 @@
     <div class="card-header ">
         <div class="clearfix bg-primary fw-bold mt-1 mb-1">
             <h5 class="float-start ms-1"><i class="fas fa-lines-leaning me-2"></i> DSR LINE LIST </h5>
-            <button class="btn btn-sm float-end me-2"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#dsr-line-card-body"
-                    aria-expanded="true"
-                    onclick="$('#dsr-line-toggle-icon').toggleClass('fa-window-maximize fa-window-minimize');
-                                           $('#dsr-line-card-body').toggle();"
-
-            >
-
-                <i id="dsr-line-toggle-icon" class="fas fa-window-minimize"></i>
+            <button class="btn btn-sm btn-light float-end" type="button"
+              data-bs-toggle="collapse"
+              id="dsr-card-collapse-btn"
+              data-bs-target="#dsr-line-card-body"
+              aria-expanded="true"
+              aria-controls="dsr-line-card-body">
+              <i id="dsr-line-toggle-icon" class="fas fa-window-minimize"></i>
             </button>
+
         </div>
         <div class="card-body collapse show" id="dsr-line-card-body">
-
+            <div class="clearfix">
+                <button type="button" class="btn btn-outline-primary btn-sm" id="btnOpenDsrFilter">
+  <i class="fas fa-filter me-1"></i> Filter
+</button>
+            </div>
+             {% include "rov/partials/dsr_line_table.html" %}
         </div>
     </div>
 </div>
