--- a/rov/templates/rov/cards/dsr_statistics.html
+++ b/rov/templates/rov/cards/dsr_statistics.html
@@ -1,7 +1,7 @@
-<div class="card shadow collapse show" id="dsr-stat-card">
+<div class="card-header bg-primary clearfix p-0" id="dsr-stat-card">
     <div class="card-header ">
         <div class="clearfix bg-warning fw-bold mt-1 mb-1">
-            <h5 class="float-start ms-1"><i class="fas fa-calculator me-2"></i> ROV STATISTICS </h5>
+            <h6 class="float-start text-white ms-2 mt-1"><i class="fas fa-calculator me-2"></i> ROV STATISTICS </h6>
             <button class="btn btn-sm float-end me-2"
                     data-bs-toggle="collapse"
                     data-bs-target="#rov-stat-card-body"
